--- a/client/views/settings/rules/index.html
+++ b/client/views/settings/rules/index.html
@@ -39,8 +39,8 @@
       ng-model="filterQuery"
     ></sd-search-handler>
     <div class="dropdown sd-margin-l--auto" dropdown="">
-      <button class="btn btn--primary ng-binding" dropdown__toggle="" translate>
-        <i class="icon-plus-sign icon--white"></i>Add New
+      <button class="btn btn--primary ng-binding" dropdown__toggle="">
+        <i class="icon-plus-sign icon--white"></i><span translate>Add New</span>
       </button>
       <ul class="dropdown__menu dropdown--align-right">
         <li>
