--- a/client/views/settings/website-management/partials/tenant.html
+++ b/client/views/settings/website-management/partials/tenant.html
@@ -15,7 +15,7 @@
     <ul class="dropdown__menu">
       <li>
         <button ng-click="webPublisherSettings.editSite(site)">
-          <i class="icon-settings"></i>Manage
+          <i class="icon-settings"></i><span translate>Manage</span>
         </button>
       </li>
       <li>
@@ -85,8 +85,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'general')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >General <i class="icon-pencil icon--dark-blue-grey"></i
+          ><span translate>General</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
       <li
@@ -95,9 +94,8 @@
         <a
           href=""
           ng-click="webPublisherSettings.editSite(site, 'routes')"
-          class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >Routes <i class="icon-pencil icon--dark-blue-grey"></i
+          class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis" 
+          ><span translate>Routes</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
       <li
@@ -107,8 +105,8 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'redirects')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >Redirects <i class="icon-pencil icon--dark-blue-grey"></i
+          
+          ><span translate>Redirects</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
       <li
@@ -118,8 +116,8 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'navigation')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >Navigation <i class="icon-pencil icon--dark-blue-grey"></i
+          
+          ><span translate>Navigation</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
       <li
@@ -129,8 +127,8 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'webhooks')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >Webhooks <i class="icon-pencil icon--dark-blue-grey"></i
+          
+          ><span translate>Webhooks</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
       <li
@@ -140,8 +138,8 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'theme')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          translate
-          >Theme <i class="icon-pencil icon--dark-blue-grey"></i
+          
+          ><span translate>Theme</span> <i class="icon-pencil icon--dark-blue-grey"></i
         ></a>
       </li>
     </ul>
