--- a/client/views/settings/website-management/route-form.html
+++ b/client/views/settings/website-management/route-form.html
@@ -14,9 +14,8 @@
   <h3
     class="side-panel__heading"
     ng-if="!webPublisherSettings.isObjEmpty(webPublisherSettings.selectedRoute)"
-    translate
   >
-    Edit {{newRoute.type}} route
+    <span translate>Edit</span> {{newRoute.type}} <span translate>route</span>
   </h3>
 </div>
 
