--- a/client/views/settings/website-management/route-form.html
+++ b/client/views/settings/website-management/route-form.html
@@ -7,9 +7,9 @@
   <h3
     class="side-panel__heading"
     ng-if="webPublisherSettings.isObjEmpty(webPublisherSettings.selectedRoute)"
-    translate
+    
   >
-    Add {{newRoute.type}} route
+    <span translate>Add</span> {{newRoute.type}} <span translate>route</span>
   </h3>
   <h3
     class="side-panel__heading"
