--- a/client/views/settings/website-management/route-form.html
+++ b/client/views/settings/website-management/route-form.html
@@ -71,8 +71,7 @@
             ng-model="newRoute.slug"
           />
           <div ng-if="newRoute.id" class="sd-line-input__message" translate>
-            Beware than changing slug will affect article urls and may cause SEO
-            issues.
+            Beware than changing slug will affect article urls and may cause SEO issues.
           </div>
         </div>
         <div class="item" ng-if="newRoute.type === 'custom'">
