--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -268,6 +268,7 @@ select[disabled] > option {
   cursor: move;
 }
 
+
 .sp-listSerialNumberMinWidth {
   min-width: 1.2em;
   text-align: center;
@@ -288,7 +289,7 @@ select[disabled] > option {
   font-size: 13px;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f2f2f2;
+  background-color: var(--sd-item__main-Bg);
   border-radius: 3px;
   line-height: 140%;
   font-family: "Courier New", Courier, monospace;
