--- a/client/views/settings/rules/index.html
+++ b/client/views/settings/rules/index.html
@@ -128,7 +128,7 @@
                 >{{webPublisherSettings.getTenantNameByCode(code)}} Rules</span
               >
               <span
-                class="text--uppercase text--blue text--smaller"
+                class="sd-txt-transform--uppercase text--blue text--smaller"
                 ng-if="webPublisherSettings.getTenantOutputChannelNameByCode(code)"
               >
                 {{webPublisherSettings.getTenantOutputChannelNameByCode(code)}}
