--- a/client/views/settings/rules/rule-item.html
+++ b/client/views/settings/rules/rule-item.html
@@ -16,7 +16,7 @@
     <div class="sd-list-item__row">
       <span class="sd-overflow-ellipsis sd-list-item--element-grow">
         <span
-          class="label label--primary label--hollow"
+          class="label label--primary label--translucent"
           ng-repeat="part in webPublisherSettings.makeExpressionReadable(rule.expression)"
         >
           {{part}}
