--- a/client/views/settings/rules/rule-preview.html
+++ b/client/views/settings/rules/rule-preview.html
@@ -17,7 +17,7 @@
     <h3 class="sd-margin-b--1">{{webPublisherSettings.selectedRule.name}}</h3>
     <p>{{webPublisherSettings.selectedRule.description}}</p>
     <span
-      class="label label--primary label--hollow margin--right"
+      class="label label--primary label--translucent margin--right"
       ng-repeat="part in webPublisherSettings.makeExpressionReadable(webPublisherSettings.selectedRule.expression)"
     >
       {{part}}
