--- a/client/views/settings/website-management/manage-theme-settings.html
+++ b/client/views/settings/website-management/manage-theme-settings.html
@@ -5,7 +5,7 @@
                 <h3 class="text--normal">Logos</h3>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Main Logo</h4>
+                <h4 class="sd-txt-transform--uppercase text--bold text--smallHeading inlineBlock">Main Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo.value && !webPublisherSettings.replace_theme_logo"
                     ng-click="webPublisherSettings.replace_theme_logo = true">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Second Logo</h4>
+                <h4 class="sd-txt-transform--uppercase text--bold text--smallHeading inlineBlock">Second Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo_second.value && !webPublisherSettings.replace_theme_logo_second"
                     ng-click="webPublisherSettings.replace_theme_logo_second = true">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="grid__item grid__item--col-4 upload-media margin--top margin--bottom">
-                <h4 class="text--uppercase text--bold text--smallHeading inlineBlock">Third Logo</h4>
+                <h4 class="sd-txt-transform--uppercase text--bold text--smallHeading inlineBlock">Third Logo</h4>
                 <div class="bottomMargin iconOnHover"
                     ng-if="webPublisherSettings.themeSettings.theme_logo_third.value && !webPublisherSettings.replace_theme_logo_third"
                     ng-click="webPublisherSettings.replace_theme_logo_third = true">
