--- a/client/views/settings/website-management/navigation/tree-renderer.html
+++ b/client/views/settings/website-management/navigation/tree-renderer.html
@@ -23,12 +23,12 @@
       <span class="text--bold">{{data.name}}</span>
     </div>
     <div>
-      <span class="text--light text--italic" ng-if="data.route">route:</span>
+      <span class="sd-text-color--light text--italic" ng-if="data.route">route:</span>
       <span class="text--lighter" ng-if="data.route"
         >{{webPublisherSettings.getRouteNameById(data.route)}}</span
       >
 
-      <span class="leftSpace text--light text--italic">URI:</span>
+      <span class="leftSpace sd-text-color--light text--italic">URI:</span>
       <span class="text--bold">{{data.uri}}</span>
     </div>
   </div>
