--- a/client/views/settings/website-management/partials/tenant.html
+++ b/client/views/settings/website-management/partials/tenant.html
@@ -84,7 +84,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'general')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >General <i class="icon-pencil icon--dark-blue-grey"></i
+          >General <i class="icon-pencil"></i
         ></a>
       </li>
       <li
@@ -94,7 +94,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'routes')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >Routes <i class="icon-pencil icon--dark-blue-grey"></i
+          >Routes <i class="icon-pencil"></i
         ></a>
       </li>
       <li
@@ -104,7 +104,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'redirects')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >Redirects <i class="icon-pencil icon--dark-blue-grey"></i
+          >Redirects <i class="icon-pencil"></i
         ></a>
       </li>
       <li
@@ -114,7 +114,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'navigation')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >Navigation <i class="icon-pencil icon--dark-blue-grey"></i
+          >Navigation <i class="icon-pencil"></i
         ></a>
       </li>
       <li
@@ -124,7 +124,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'webhooks')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >Webhooks <i class="icon-pencil icon--dark-blue-grey"></i
+          >Webhooks <i class="icon-pencil"></i
         ></a>
       </li>
       <li
@@ -134,7 +134,7 @@
           href=""
           ng-click="webPublisherSettings.editSite(site, 'theme')"
           class="sd-card__content-list-block-link sd-card__content-list-block-link--icon-hover sd-overflow-ellipsis"
-          >Theme <i class="icon-pencil icon--dark-blue-grey"></i
+          >Theme <i class="icon-pencil"></i
         ></a>
       </li>
     </ul>
