--- a/client/views/settings/website-management/tenant-list.html
+++ b/client/views/settings/website-management/tenant-list.html
@@ -37,7 +37,7 @@
 <div class="sd-page__content relative">
   <div class="sd-loader" ng-if="loading"></div>
   <a
-    class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 fixedPosition fixedPosition--bottomRight"
+    class="btn btn--sd-green btn--icon-only btn--icon-only-circle btn--large sd-shadow--z4 fixedPosition fixedPosition--bottomRight"
     style="z-index: 1"
     ng-click="webPublisherSettings.toggleInfoCarousel()"
     ><i class="icon-info-large"></i
