--- a/client/styles/wizardThemeDetails.scss
+++ b/client/styles/wizardThemeDetails.scss
@@ -2,17 +2,17 @@
     z-index: 1;
     overflow: hidden;
     margin: -2rem;
-    &__header {
-        padding: 1.2rem;
-        border-bottom: 1px solid #e4e4e4;
-        min-height: 48px;
-        .icn-btn:disabled {
-            opacity: .2;
-            cursor: not-allowed;
-        }
+}
+.wizardThemeDetails__header {
+    padding: 1.2rem;
+    border-bottom: 1px solid #e4e4e4;
+    min-height: 48px;
+    .icn-btn:disabled {
+        opacity: .2;
+        cursor: not-allowed;
     }
-    &__content {
-        overflow-y: auto;
-        padding: 2rem 0;
-    }
+}
+.wizardThemeDetails__content {
+    overflow-y: auto;
+    padding: 2rem 0;
 }
