--- a/client/views/settings/website-management/manage-general.html
+++ b/client/views/settings/website-management/manage-general.html
@@ -111,7 +111,7 @@
     </div>
     <div ng-if="newSite.output_channel">
       <div class="form__row">
-        <h4 class="text--light text--uppercase">
+        <h4 class="sd-text-color--light sd-txt-transform--uppercase">
           {{newSite.output_channel.type}} settings
         </h4>
       </div>
@@ -136,7 +136,7 @@
     </div>
     <div ng-if="newSite.pwa_config && newSite.pwa_config.url">
       <div class="form__row">
-        <h4 class="text--light text--uppercase">PWA settings</h4>
+        <h4 class="sd-text-color--light sd-txt-transform--uppercase">PWA settings</h4>
       </div>
       <div class="form__row" ng-repeat="(name, value) in newSite.pwa_config">
         <div class="form__row-item">
