--- a/client/views/settings/website-management/navigation/menu.html
+++ b/client/views/settings/website-management/navigation/menu.html
@@ -48,26 +48,33 @@
 
     <div class="sd-preview-panel">
       <div class="side-panel side-panel--shadow-right">
-        <div class="side-panel__header side-panel__header--border-b">
-          <a
-            class="icn-btn side-panel__close"
-            ng-click="webPublisherSettings.toogleCreateMenu(false)"
-            ><i class="icon-close-small"></i
-          ></a>
-          <h3
-            class="side-panel__heading"
-            ng-if="webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)"
-            translate
-          >
-            Add Menu Item
-          </h3>
-          <h3
-            class="side-panel__heading"
-            ng-if="!webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)"
-            translate
-          >
-            Edit Menu Item
-          </h3>
+        <div class="side-panel__header side-panel__header--border-b side-panel__header--has-close">
+          <div class="side-panel__header-wrapper">
+            <div class="side-panel__header-inner">
+              <h3
+                class="side-panel__heading"
+                ng-if="webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)"
+                translate
+              >
+                Add Menu Item
+              </h3>
+              <h3
+                class="side-panel__heading"
+                ng-if="!webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)"
+                translate
+              >
+                Edit Menu Item
+              </h3>
+            </div>
+            <div class="button-group button-group--end button-group--no-space side-panel__btn-group">
+              <a
+                class="icn-btn side-panel__close"
+                ng-click="webPublisherSettings.toogleCreateMenu(false)"
+                >
+                  <i class="icon-close-small"></i>
+              </a>
+            </div>
+          </div>
         </div>
 
         <div class="side-panel__content">
@@ -176,7 +183,7 @@
         </div>
         <div class="side-panel__footer side-panel__footer--button-box">
           <div
-            class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2"
+            class="button-group button-group--end button-group--comfort"
           >
             <a
               class="btn btn--hollow"
