--- a/client/views/settings/website-management/webhooks/webhook-add.html
+++ b/client/views/settings/website-management/webhooks/webhook-add.html
@@ -1,15 +1,21 @@
-<div class="side-panel__header side-panel__header--border-b">
-  <a
-    class="icn-btn side-panel__close"
-    ng-click="webPublisherSettings.toggleCreateWebhook(false)"
-    ><i class="icon-close-small"></i
-  ></a>
-  <h3 class="side-panel__heading" ng-if="!newWebhook.id" translate>
-    Add Webhook
-  </h3>
-  <h3 class="side-panel__heading" ng-if="newWebhook.id" translate>
-    Edit Webhook
-  </h3>
+<div class="side-panel__header side-panel__header--border-b side-panel__header--has-close">
+  <div class="side-panel__header-wrapper">
+    <div class="side-panel__header-inner">
+      <h3 class="side-panel__heading" ng-if="!newWebhook.id" translate>
+        Add Webhook
+      </h3>
+      <h3 class="side-panel__heading" ng-if="newWebhook.id" translate>
+        Edit Webhook
+      </h3>
+    </div>
+    <div class="button-group button-group--end button-group--no-space side-panel__btn-group">
+      <a
+        class="icn-btn side-panel__close"
+        ng-click="webPublisherSettings.toggleCreateWebhook(false)">
+        <i class="icon-close-small"></i>
+      </a>
+    </div>
+  </div>
 </div>
 
 <div class="side-panel__content">
@@ -71,9 +77,7 @@
   </div>
 </div>
 <div class="side-panel__footer side-panel__footer--button-box">
-  <div
-    class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2"
-  >
+  <div class="button-group button-group--end button-group--comfort">
     <a
       class="btn btn--hollow"
       ng-click="webPublisherSettings.toggleCreateWebhook()"
